# atlas-badges

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/demo-repo/: .atlas-concepts.yml  README.md  wrangler.toml
examples/demo-repo/.github/workflows/: deploy.yml
examples/demo-repo/src/: index.js
src/atlas_badges/: __init__.py  badges.py  cli.py  concepts.py  overrides.py  readme_writer.py  scanner.py
tests/: test_badges_and_readme.py  test_scanner.py
